# c-learning

./: .gitignore  CMakeLists.txt  README.md
Examples/inc/: log.h  main.h  pointer_usage.h  recursion_with_switch_statements.h
Examples/src/: log.c  main.c  pointer_usage.c  recursion_with_switch_statements.c
Lessons/Lesson_0/doc/: README.md
Lessons/Lesson_1/doc/: README.md  solutions.md
Lessons/Lesson_1/src/: example1.c
resources/: mingw_install.md
src/: HelloWorld.c
